force-app/main/default/objects/Questions__c/fields/EMI__c.field-meta.xml
<CustomField>
    <fullName>EMI__c</fullName>
    <formula>(Principle__c  + ( Principle__c  *  Total_Months__c  *  Intrest__c ) / 100) /  Total_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>