force-app/main/default/objects/Questions__c/fields/Emp_Grade__c.field-meta.xml
<CustomField>
    <fullName>Emp_Grade__c</fullName>
    <label>Emp Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A band</fullName>
            </value>
            <value>
                <fullName>B band</fullName>
            </value>
            <value>
                <fullName>C band</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>