force-app/main/default/objects/Questions__c/fields/Hike__c.field-meta.xml
<CustomField>
    <fullName>Hike__c</fullName>
    <formula>CASE( Emp_Grade__c , &apos;A band&apos;, (Salary__c  * 0.30), &apos;B band&apos;,  (Salary__c  * 0.25), &apos;C band&apos;,  (Salary__c  * 0.20), Salary__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hike</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>