force-app/main/default/objects/Questions__c/fields/Intrest__c.field-meta.xml
<CustomField>
    <fullName>Intrest__c</fullName>
    <label>Intrest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>