force-app/main/default/objects/Questions__c/fields/Number_of_Months_Paid__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Months_Paid__c</fullName>
    <label>Number of Months Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>