force-app/main/default/objects/Questions__c/fields/Principle__c.field-meta.xml
<CustomField>
    <fullName>Principle__c</fullName>
    <label>Principle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>