force-app/main/default/objects/Questions__c/fields/Total_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Months__c</fullName>
    <label>Total Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>